# qtgeoservice_generic

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  geotiledmappingmanagerengine_esri.cpp  geotiledmappingmanagerengine_esri.h  geotiledmapreply_esri.cpp  geotilefetcher_esri.cpp  maps.json
